--- a/ProjetoMini/ProjetoMini/Info.plist
+++ b/ProjetoMini/ProjetoMini/Info.plist
@@ -5,6 +5,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>jupiter-crash-brk.regular.ttf</string>
+		<string>ka1.ttf</string>
 	</array>
 </dict>
 </plist>
